# wasm-core

./: .gitignore  Cargo.toml  README.md
examples/payload/: btreemap.rs  ext_call.rs  fib.rs
examples/payload/tests/src/: alloc.rs  call_indirect.rs  match.rs  mem_rw.rs
hetrans/: Cargo.toml
hetrans/src/: main.rs
src/: cfgraph.rs  executor.rs  fp_ops.rs  hetrans.rs  int_ops.rs  lib.rs  module.rs  opcode.rs  prelude.rs  prelude_no_std.rs  resolver.rs  ssa.rs  value.rs
src/jit/: compiler.rs  compiler_intrinsics.rs  llvm.rs  mod.rs  ondemand.rs  runtime.rs  vm.rs
src/optimizers/: mod.rs
src/platform/: generic.rs  mod.rs  other.rs
src/platform/x86_64_linux/: mod.rs  sigsegv.rs
src/trans/: debug_print.rs  mod.rs  optrans.rs
tests/emscripten/: config.json
tests/runner/: run.py
translator/: Cargo.toml
translator/examples/: execute.rs  simple.rs
translator/src/: config.rs  debug_print.rs  lib.rs  optrans.rs
wa/: Cargo.toml
wa/src/: jit.rs  main.rs  resolver.rs  stream.rs  syscall.rs  utils.rs
